--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -46,7 +46,7 @@
 /* CSS */
 .button-56 {
   align-items: center;
-  background-color: #C5FAD5;
+  background-color: #C1A3A3;
   border: 2px solid #111;
   border-radius: 8px;
   box-sizing: content-box;
